--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center; margin-top: 20px;">
   <h4>
-    Upload, Download and Delete Blob Files using ASP.NET Core and Angular 8
+    Cissa Softwares - Upload, Download and Delete Files
   </h4>
 </div>
 
